[tool.poetry]
name = "msmanager"
version = "0.1.2"
description = "Manager for managing Mindusrty servers."
authors = ["Romanin <semina054@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "msmanager"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.7"
platformdirs = "^3.5.1"
"versioner.py" = "^1.1.0"
vbml = "^1.1.post1"
click = "^8.1.3"
screens-py = "^0.5.0"
rich = "^13.3.5"
pydustry-py = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
